--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
     <title>LD46</title>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
         #game-parent {
-            margin-left: auto;
-            margin-right: auto;
+            margin-left: 0;
+            text-align: center;
+            background-color: black;
         }
     </style>
 </head>
+
 <body>
     <script src="./index.ts"></script>
     <div id="game-parent"></div>
 </body>
+
 </html>
