--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <script src="./index.ts"></script>
+    <script src="~/index.ts"></script>
     <div id="game-parent"></div>
 </body>
 
